@@ -385,3 +385,7 @@
 
         * Release eet 1.3.2
 
+2010-06-29  Vincent Torri
+
+        * On Windows 64, long is of size 32 bits and not 64 bits. Also
+	LONG_BIT is not defined on Windows.
